    - Added SimulateCursors trait for Identi.ca compatibility

3.11008 2010-03-02
    - Added support for new api methods: reverse_geocode, geo_id
    - Updated method "update" with new parameters: place_id, display_coordinates

3.11007 2010-02-27
    - xAuth implemented and tested

3.11006_01 2010-02-26
    - xAuth implemented: @oauth = $nt->xauth($username, $password);

3.11006 2010-02-25
    - Fixed: unicode.t skip needed number of tests to skip (miyagawa)

3.11005 2010-02-25
    - Fixed: image updates accept a single array ref argument (RT#54422)
    - Fixed: "since" synthetic arg with InflateObjects role (RT#54901)
    - Fixed: utf8 encoding error for latin1 using Basic Authentication
    - Allow a pre-created user agent object as argument to new (ua => $ua)
    - FAQ: How do I get Twitter to display something other than "from Perl Net::Twitter"?

3.11004 2010-02-09
    - Removed an extraneous tar ball from the distribution (no code changes)

3.11003 2010-01-29
    - Renamed "retweeted_of_me" REST API call to the correct "retweets_of_me" (Dan Moore @mgrdcm)
    - Back the Moose requirement down to 0.09 (earliest version with native traits)

3.11002 2010-01-28
    - Use Moose 0.94 with native traits (resolves CPAN testers failing reports)

3.11001 2010-01-28
    - Honor synthetic args (authenticate and since) for Lists API calls

3.11000 2010-01-27
    - Lists API overhaul; bug fixes, added parameters, documentation
    - Create meaninful names for anonymous classes; better error context
    - Added "Paging and Cursors" documentation section

3.10003 2009-12-15
    - Oops! Fixed bug in new test in t/10_net-twitter-regression.t (oh, the irony!)

3.10002 2009-12-15
    - Added netrc_machine option to new with default 'api.twitter.com'
    - Fixed: netrc failed without trait API::REST
    - Fixed: retweeted_{to,of}_me API URLs (RT#52784)

3.10001 2009-11-26
    - Fixed: new t/51_rate_limit.t needs to skip tests unless LWP >= 5.819

3.10000 2009-11-24